--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -6,7 +6,8 @@ $bp-landing-navbar: 51.5em; // 824px, 824/16 = 51.5em
 $bp-landing-smallest: 37.5em; // 600px, 600/16 = 37.5em
 
 $bp-largest: 81.25em; //1300px, 1300/16 = 81.25em
-$bp-large: 39em; // 624px, 624/16 = 39em
+//$bp-large: 39em; // 624px, 624/16 = 39em
+$bp-large: 45.125em; // 722px, 722/16 = 45.125em
 $bp-smallest: 20em; // 320px, 320/16 = 20em
 /* Basix reset */
 *,
