--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1760,7 +1760,7 @@ body {
   position: relative;
   display: grid;
   grid-template-columns: [order-start] min-content [order-end info-start] 1fr [info-end sets-start] min-content [sets-end actions-start] min-content [actions-end];
-  grid-template-rows: [presenter-top] 1fr [presenter-bottom];
+  grid-template-rows: [info-start actions-start order-start] 1fr [info-end actions-end order-end];
   grid-column-gap: 2rem;
   background-color: #fff;
   padding: 2rem;
@@ -1780,7 +1780,7 @@ body {
 }
 .exercise-presenter__info-box {
   grid-column: order-start/actions-start;
-  grid-row: presenter-top/presenter-bottom;
+  grid-row: info-start/info-end;
   display: grid;
   grid-template-columns: 1fr;
   grid-auto-rows: min-content;
@@ -1798,7 +1798,7 @@ body {
 }
 .exercise-presenter__actions-box {
   grid-column: actions-start/actions-end;
-  grid-row: presenter-top/presenter-bottom;
+  grid-row: actions-start/actions-end;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -1837,6 +1837,12 @@ body {
   align-items: center;
   justify-content: center;
 }
+@media screen and (max-width: 81.25em) {
+  .exercise-presenter__sets-box {
+    justify-content: space-around;
+    flex-direction: column;
+  }
+}
 
 .exercise-presenter--no-actions .exercise-presenter__actions-box {
   display: none;
@@ -1845,9 +1851,16 @@ body {
   grid-column: 1/-1;
 }
 
+@media screen and (max-width: 45.125em) {
+  .exercise-presenter--creating-template {
+    grid-template-columns: [order-start actions-start] min-content [order-end actions-end info-start sets-start] 1fr [info-end sets-end] !important;
+    grid-template-rows: [info-start order-start] 1fr [info-end order-end actions-start sets-start] 1fr [actions-end sets-end] !important;
+    width: 100%;
+  }
+}
 .exercise-presenter--creating-template .exercise-presenter__order-box {
   grid-column: order-start/order-end;
-  grid-row: presenter-top/presenter-bottom;
+  grid-row: order-start/order-end;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -1861,6 +1874,7 @@ body {
 }
 .exercise-presenter--creating-template .exercise-presenter__info-box {
   grid-column: info-start/info-end;
+  grid-row: info-start/info-end;
 }
 .exercise-presenter--creating-template .exercise-presenter__sets-box {
   grid-column: sets-start/sets-end;
@@ -2216,6 +2230,11 @@ body {
   grid-column-gap: 8rem;
   max-height: 100%;
 }
+@media only screen and (max-width: 45.125em) {
+  .template-creator {
+    grid-column-gap: 3rem;
+  }
+}
 .template-creator__exercise-search-bar {
   grid-row: name-start/name-end;
   align-self: end;
@@ -2235,6 +2254,11 @@ body {
   grid-gap: 2rem;
   overflow-y: scroll;
 }
+@media only screen and (max-width: 30.9375em) {
+  .template-creator__available-exercises-box {
+    grid-template-columns: repeat(auto-fit, minmax(12rem, 1fr));
+  }
+}
 .template-creator__used-exercises-box {
   grid-column: templates-start/templates-end;
   grid-row: presenter-start/presenter-end;
@@ -2244,6 +2268,11 @@ body {
   grid-gap: 2rem;
   overflow-y: scroll;
 }
+@media only screen and (max-width: 30.9375em) {
+  .template-creator__used-exercises-box {
+    width: 100%;
+  }
+}
 .template-creator__input-box {
   display: flex;
   flex-direction: column;
@@ -2252,9 +2281,21 @@ body {
   grid-row: name-start/name-end;
   grid-column: templates-start/input-end;
 }
+@media only screen and (max-width: 45.125em) {
+  .template-creator__input-box--name {
+    grid-row: name-start/name-end;
+    grid-column: templates-start/templates-end;
+  }
+}
 .template-creator__input-box--description {
   grid-row: description-start/description-end;
   grid-column: templates-start/input-end;
+}
+@media only screen and (max-width: 45.125em) {
+  .template-creator__input-box--description {
+    grid-row: description-start/description-end;
+    grid-column: templates-start/templates-end;
+  }
 }
 .template-creator__input-area {
   display: flex;
@@ -2301,6 +2342,12 @@ body {
 .template-creator__confirm-button {
   grid-column: create-button-start/create-button-end;
   grid-row: name-start/description-end;
+}
+@media only screen and (max-width: 45.125em) {
+  .template-creator__confirm-button {
+    grid-column: exercises-start/exercises-end;
+    grid-row: description-start/description-end;
+  }
 }
 .template-creator__available-exercise-wrapper--disabled > * {
   cursor: not-allowed !important;
@@ -3188,11 +3235,22 @@ body {
   visibility: visible;
   transition: transform 0.2s ease, opacity 0.2s ease, visibility 0.2s ease;
 }
+@media screen and (max-width: 81.25em) {
+  .templates-page__new-template-popup {
+    width: 100%;
+    height: 100%;
+  }
+}
 .templates-page__new-template-popup--shrunk {
   transform: translate(2.5%, 2.5%) scale(0.8);
 }
 .templates-page__new-template-popup--real-size {
   transform: translate(2.5%, 2.5%) scale(1);
+}
+@media screen and (max-width: 81.25em) {
+  .templates-page__new-template-popup--real-size {
+    transform: translate(0, 0) scale(1);
+  }
 }
 .templates-page__new-template-popup--hidden {
   opacity: 0;
