--- a/src/sass/components/_exercise-presenter.scss
+++ b/src/sass/components/_exercise-presenter.scss
@@ -1,194 +1,233 @@
 @use "../abstracts/" as *;
-
+@use "../base/" as *;
 
 .exercise-presenter {
-    position: relative;
+  position: relative;
+  display: grid;
+
+  grid-template-columns:
+    [order-start]
+    min-content
+    [order-end info-start]
+    1fr
+    [info-end sets-start]
+    min-content
+    [sets-end actions-start]
+    min-content
+    [actions-end];
+  grid-template-rows:
+    [info-start actions-start order-start]
+    1fr
+    [info-end actions-end order-end];
+
+  grid-column-gap: 2rem;
+
+  background-color: $color-white;
+  padding: 2rem;
+  border-radius: 1.5rem;
+
+  border: 2px solid transparent;
+
+  transition: all 0.2s;
+
+  @media only screen and (max-width: $bp-small) {
+    // grid-column-gap: 0.5rem;
+    // padding: 0.5rem;
+    // border-radius: 0.5rem;
+  }
+
+  &:hover,
+  &:active {
+    border-color: $color-primary;
+    box-shadow: 0 0.5rem 2rem rgba($color-black, 0.05);
+  }
+
+  &--disabled {
+    cursor: not-allowed;
+
+    &,
+    &:hover {
+      border-color: $color-grey-dark-2 !important;
+    }
+  }
+
+  &__info-box {
+    // Starts in order and ends in actions due to the fact that the default component
+    // will not show the order number
+    grid-column: order-start / actions-start;
+    grid-row: info-start / info-end;
+
     display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-rows: min-content;
+    grid-gap: 1rem;
+  }
 
-    grid-template-columns: [order-start] min-content [order-end info-start] 1fr [info-end sets-start] min-content [sets-end actions-start] min-content [actions-end];
-    grid-template-rows: [presenter-top] 1fr [presenter-bottom];
+  &__name {
+    font-size: 2rem;
+    font-weight: 600;
+    color: $color-grey-dark-5;
+  }
 
-    grid-column-gap: 2rem;
+  &__description {
+    font-size: 1.6rem;
+    color: $color-grey-dark-4;
+    hyphens: auto;
+  }
 
-    background-color: $color-white;
-    padding: 2rem;
-    border-radius: 1.5rem;
+  &__actions-box {
+    grid-column: actions-start / actions-end;
+    grid-row: actions-start / actions-end;
 
-    border: 2px solid transparent;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+  }
 
+  &__icon-box {
+    width: 2.5rem;
+    height: 2.5rem;
+    cursor: pointer;
     transition: all 0.2s;
 
-    &:hover,
-    &:active {
-        border-color: $color-primary;
-        box-shadow: 0 .5rem 2rem rgba($color-black, 0.05);
+    & > * {
+      width: 100%;
+      height: 100%;
+    }
+
+    &--delete {
+      &:hover {
+        color: $color-red;
+      }
+    }
+
+    &--edit {
+      &:hover {
+        color: $color-primary;
+      }
+    }
+
+    &--remove-from-template {
+      display: none;
+
+      &:hover {
+        color: $color-red;
+      }
     }
 
     &--disabled {
-        cursor: not-allowed;
+      cursor: not-allowed;
 
-        &,
-        &:hover {
-            border-color: $color-grey-dark-2 !important;
-        }
+      &,
+      &:hover,
+      &:active {
+        color: $color-grey-dark-2 !important;
+      }
     }
+  }
 
-    &__info-box {
-        // Starts in order and ends in actions due to the fact that the default component
-        // will not show the order number
-        grid-column: order-start / actions-start;
-        grid-row: presenter-top / presenter-bottom;
+  &__sets-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-auto-rows: min-content;
-        grid-gap: 1rem;
+    @media screen and (max-width: $bp-largest) {
+      justify-content: space-around;
+      flex-direction: column;
     }
-
-    &__name {
-        font-size: 2rem;
-        font-weight: 600;
-        color: $color-grey-dark-5;
-    }
-
-    &__description {
-        font-size: 1.6rem;
-        color: $color-grey-dark-4;
-        hyphens: auto;
-    }
-
-    &__actions-box {
-        grid-column: actions-start / actions-end;
-        grid-row: presenter-top / presenter-bottom;
-
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-between;
-    }
-
-    &__icon-box {
-        width: 2.5rem;
-        height: 2.5rem;
-        cursor: pointer;
-        transition: all 0.2s;
-
-        &>* {
-            width: 100%;
-            height: 100%;
-        }
-
-        &--delete {
-            &:hover {
-                color: $color-red;
-            }
-        }
-
-        &--edit {
-            &:hover {
-                color: $color-primary;
-            }
-        }
-
-        &--remove-from-template {
-            display: none;
-
-            &:hover {
-                color: $color-red;
-            }
-        }
-
-        &--disabled {
-            cursor: not-allowed;
-
-            &,
-            &:hover,
-            &:active {
-                color: $color-grey-dark-2 !important;
-            }
-        }
-    }
-
-    &__sets-box {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
+  }
 }
 
 .exercise-presenter--no-actions {
-    .exercise-presenter__actions-box {
-        display: none;
-    }
+  .exercise-presenter__actions-box {
+    display: none;
+  }
 
-    .exercise-presenter__info-box {
-        grid-column: 1 / -1;
-    }
+  .exercise-presenter__info-box {
+    grid-column: 1 / -1;
+  }
 }
 
-
 .exercise-presenter--creating-template {
+  @media screen and (max-width: $bp-large) {
+    grid-template-columns:
+      [order-start actions-start]
+      min-content
+      [order-end actions-end info-start sets-start]
+      1fr
+      [info-end sets-end] !important;
 
-    .exercise-presenter {
+    grid-template-rows:
+      [info-start order-start]
+      1fr
+      [info-end order-end actions-start sets-start]
+      1fr
+      [actions-end sets-end] !important;
 
-        // Layout the order
-        &__order-box {
-            grid-column: order-start / order-end;
-            grid-row: presenter-top / presenter-bottom;
+    // grid-row-gap: 2rem;
+    width: 100%;
+  }
 
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
+  .exercise-presenter {
+    // Layout the order
+    &__order-box {
+      grid-column: order-start / order-end;
+      grid-row: order-start / order-end;
 
-        // order number
-        &__order {
-            font-size: 2.5rem;
-            font-weight: 400;
-            font-family: inherit;
-            color: $color-grey-dark-3;
-            padding: 0 1rem;
-        }
-
-        &__info-box {
-            grid-column: info-start / info-end;
-        }
-
-        &__sets-box {
-            grid-column: sets-start / sets-end;
-        }
-
-        // Only show remove from template action
-        &__icon-box--remove-from-template {
-            display: inline-block;
-        }
-
-        &__icon-box--edit {
-            display: none;
-        }
-
-        &__icon-box--delete {
-            display: none;
-        }
-
-        // Center icon vertically
-        &__actions-box {
-            justify-content: center;
-        }
-
-        &__sets-label {
-            font-size: 1.6rem;
-            color: $color-grey-dark-4;
-            margin-right: 2rem;
-        }
-
-        &__sets-input {
-            &--disabled {
-                background-color: $color-grey-light-2;
-                color: $color-grey-dark-4;
-                cursor: not-allowed;
-            }
-        }
-
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
+
+    // order number
+    &__order {
+      font-size: 2.5rem;
+      font-weight: 400;
+      font-family: inherit;
+      color: $color-grey-dark-3;
+      padding: 0 1rem;
+    }
+
+    &__info-box {
+      grid-column: info-start / info-end;
+      grid-row: info-start / info-end;
+    }
+
+    &__sets-box {
+      grid-column: sets-start / sets-end;
+    }
+
+    // Only show remove from template action
+    &__icon-box--remove-from-template {
+      display: inline-block;
+    }
+
+    &__icon-box--edit {
+      display: none;
+    }
+
+    &__icon-box--delete {
+      display: none;
+    }
+
+    &__actions-box {
+      // Center icon vertically
+      justify-content: center;
+    }
+
+    &__sets-label {
+      font-size: 1.6rem;
+      color: $color-grey-dark-4;
+      margin-right: 2rem;
+    }
+
+    &__sets-input {
+      &--disabled {
+        background-color: $color-grey-light-2;
+        color: $color-grey-dark-4;
+        cursor: not-allowed;
+      }
+    }
+  }
 }
