--- a/src/sass/components/_nav-vertical.scss
+++ b/src/sass/components/_nav-vertical.scss
@@ -99,6 +99,11 @@
         padding-left: 1rem;
         padding-right: 1rem;
       }
+
+      @media only screen and (max-width: $bp-small) {
+        padding-left: 0.1rem;
+        padding-right: 0.1rem;
+      }
     }
 
     &:hover {
@@ -184,6 +189,38 @@
     &--disabled {
       cursor: not-allowed !important;
       color: $color-grey-light-1 !important;
+    }
+  }
+
+  &__user-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+  }
+
+  &__user-icon-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    & > * {
+      width: 3rem;
+      height: 3rem;
+    }
+
+    @media screen and (max-width: $bp-large) {
+      display: none;
+    }
+  }
+
+  &__username {
+    margin: 1rem;
+
+    @media screen and (max-width: $bp-small) {
+      margin: 0.1rem;
+      margin-left: 0;
+      max-width: 2.5rem;
+      overflow: hidden;
     }
   }
 }
