--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -5,9 +5,18 @@ $bp-landing-small: 56.25em; // 900px, 900/16 = 56.25em
 $bp-landing-navbar: 51.5em; // 824px, 824/16 = 51.5em
 $bp-landing-smallest: 37.5em; // 600px, 600/16 = 37.5em
 
+// IMPORTANT NOTE: MODIFY IN :root BELOW TOO
 $bp-largest: 81.25em; //1300px, 1300/16 = 81.25em
 $bp-large: 45.125em; // 722px, 722/16 = 45.125em
 $bp-small: 30.9375em; // 495px, 495/16 = 30.9375em
+
+// breakpoints to use from JS
+:root {
+  --bp-largest: 1300;
+  --bp-large: 722;
+  --bp-small: 495;
+}
+
 /* Basix reset */
 *,
 *::after,
