--- a/src/sass/components/_popup-edit-name-and-description.scss
+++ b/src/sass/components/_popup-edit-name-and-description.scss
@@ -1,126 +1,131 @@
 @use "../abstracts/" as *;
+@use "../base/" as *;
 
 .popup-name-desc {
-    z-index: 1000;
-    position: absolute;
-    // top and left are actually controlled by JavaScript
-    // to make the popup appear near the clicked element
-    top: 40px;
-    left: 40px;
+  z-index: 1000;
+  position: absolute;
+  // top and left are actually controlled by JavaScript
+  // to make the popup appear near the clicked element
+  top: 40px;
+  left: 40px;
 
-    $normal-border-color: $color-grey-dark-1;
-    $hover-border-color: $color-primary-dark;
+  $normal-border-color: $color-grey-dark-1;
+  $hover-border-color: $color-primary-dark;
 
-    display: grid;
-    grid-template-columns: [input-start] 1fr [input-end actions-start] min-content [actions-end];
-    grid-column-gap: 4rem;
+  display: grid;
+  grid-template-columns: [input-start] 1fr [input-end actions-start] min-content [actions-end];
+  grid-column-gap: 4rem;
 
-    border-radius: 1rem;
-    padding: 2rem 2.5rem;
+  border-radius: 1rem;
+  padding: 2rem 2.5rem;
 
-    background-color: $color-grey-light-2;
-    border: 2px solid $normal-border-color;
-    box-shadow: 0 2rem 4rem rgba($color-black, 0.2);
+  background-color: $color-grey-light-2;
+  border: 2px solid $normal-border-color;
+  box-shadow: 0 2rem 4rem rgba($color-black, 0.2);
 
-    opacity: 1;
-    visibility: visible;
+  opacity: 1;
+  visibility: visible;
 
-    transition: border 0.2s ease, opacity 0.1s ease, visibility 0.1s ease;
+  transition: border 0.2s ease, opacity 0.1s ease, visibility 0.1s ease;
 
-    &--hidden {
-        opacity: 0;
-        visibility: hidden;
+  @media only screen and (max-width: $bp-small) {
+    grid-column-gap: 2rem;
+  }
+
+  &--hidden {
+    opacity: 0;
+    visibility: hidden;
+  }
+
+  &:hover {
+    border-color: $hover-border-color;
+  }
+
+  &:hover .popup-arrow {
+    background-color: $hover-border-color;
+  }
+
+  &__icons-area {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  &__icon-box {
+    width: 3rem;
+    height: 3rem;
+    cursor: pointer;
+    transition: all 0.2s;
+
+    & > * {
+      width: 100%;
+      height: 100%;
+    }
+
+    &--reject {
+      margin-top: 2rem;
+
+      &:hover {
+        color: $color-red;
+      }
+    }
+
+    &--accept {
+      &:hover {
+        color: $color-primary;
+      }
+    }
+
+    &--disabled {
+      cursor: not-allowed !important;
+      color: $color-grey-dark-2 !important;
+    }
+  }
+
+  &__input-box {
+    display: flex;
+    flex-direction: column;
+
+    &:not(:last-child) {
+      margin-bottom: 2rem;
+    }
+  }
+
+  &__input-area {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  &__input {
+    max-width: 30rem;
+    min-width: 100%;
+    max-height: 20rem;
+    min-height: 4.2rem;
+
+    color: $color-grey-dark-4;
+    border: 2px solid transparent;
+
+    transition: all 0.2s;
+
+    &:focus,
+    &:active {
+      border-color: $color-primary;
     }
 
     &:hover {
-        border-color: $hover-border-color;
+      border-color: $color-primary-light;
     }
 
-    &:hover .popup-arrow {
-        background-color: $hover-border-color;
+    &--disabled {
+      cursor: not-allowed !important;
+      border-color: transparent !important;
     }
+  }
 
-    &__icons-area {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-between;
-    }
-
-    &__icon-box {
-        width: 3rem;
-        height: 3rem;
-        cursor: pointer;
-        transition: all 0.2s;
-
-        &>* {
-            width: 100%;
-            height: 100%;
-        }
-
-        &--reject {
-            margin-top: 2rem;
-
-            &:hover {
-                color: $color-red;
-            }
-        }
-
-        &--accept {
-            &:hover {
-                color: $color-primary;
-            }
-        }
-
-        &--disabled {
-            cursor: not-allowed !important;
-            color: $color-grey-dark-2 !important;
-        }
-    }
-
-    &__input-box {
-        display: flex;
-        flex-direction: column;
-
-        &:not(:last-child) {
-            margin-bottom: 2rem;
-        }
-    }
-
-    &__input-area {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-    }
-
-    &__input {
-        max-width: 30rem;
-        min-width: 100%;
-        max-height: 20rem;
-        min-height: 4.2rem;
-
-        color: $color-grey-dark-4;
-        border: 2px solid transparent;
-
-        transition: all 0.2s;
-
-        &:focus,
-        &:active {
-            border-color: $color-primary;
-        }
-
-        &:hover {
-            border-color: $color-primary-light;
-        }
-
-        &--disabled {
-            cursor: not-allowed !important;
-            border-color: transparent !important;
-        }
-    }
-
-    &__label {
-        font-weight: 400;
-        margin-bottom: .5rem;
-    }
+  &__label {
+    font-weight: 400;
+    margin-bottom: 0.5rem;
+  }
 }
