--- a/src/sass/components/_popup-option-or-cancel.scss
+++ b/src/sass/components/_popup-option-or-cancel.scss
@@ -1,181 +1,179 @@
 @use "../abstracts/" as *;
 
 .popup-option-or-cancel {
-    position: fixed;
-    z-index: 9999;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    backdrop-filter: blur(.1rem) brightness(90%);
+  position: fixed;
+  z-index: 9999;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(0.1rem) brightness(90%);
 
-    opacity: 1;
-    visibility: visible;
+  opacity: 1;
+  visibility: visible;
 
-    transition: all .2s;
+  transition: all 0.2s;
 
-    &--hidden {
-        opacity: 0;
-        visibility: hidden;
+  &--hidden {
+    opacity: 0;
+    visibility: hidden;
+  }
+
+  &__dialog {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+
+    display: grid;
+
+    grid-template-rows: repeat(3, min-content);
+    grid-gap: 2rem;
+
+    transform: translate(-50%, -70%);
+    background-color: $color-white;
+    padding: 2rem 3rem;
+    border-radius: 1rem;
+    font-size: 1.6rem;
+    box-shadow: 0 1rem 2rem rgba($color-black, 0.2);
+  }
+
+  &__icon-box {
+    justify-self: center;
+    width: 5.5rem;
+    height: 5.5rem;
+
+    & > * {
+      width: 100%;
+      height: 100%;
     }
 
-    &__dialog {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-
-        display: grid;
-
-        grid-template-rows: repeat(3, min-content);
-        grid-gap: 2rem;
-
-        transform: translate(-20%, -50%);
-        background-color: $color-white;
-        padding: 2rem 3rem;
-        border-radius: 1rem;
-        font-size: 1.6rem;
-        box-shadow: 0 1rem 2rem rgba($color-black, .2);
+    &--positive {
+      color: $color-primary;
     }
 
-    &__icon-box {
-        justify-self: center;
-        width: 5.5rem;
-        height: 5.5rem;
-
-        &>* {
-            width: 100%;
-            height: 100%;
-        }
-
-        &--positive {
-            color: $color-primary;
-        }
-
-        &--delete {
-            color: $color-red;
-        }
-
-        &--warning {
-            color: $color-secondary;
-        }
+    &--delete {
+      color: $color-red;
     }
 
-    &__text-box {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
+    &--warning {
+      color: $color-secondary;
+    }
+  }
+
+  &__text-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+
+  &__title {
+    font-size: 1.8rem;
+    font-weight: 600;
+  }
+
+  &__subtitle {
+    font-size: 1.3rem;
+    margin-top: 1rem;
+  }
+
+  &__buttons-box {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 1rem;
+
+    & > * {
+      justify-self: center;
+    }
+  }
+
+  &__button {
+    padding: 1.3rem 3.3rem;
+    border-radius: 1rem;
+    font-size: 1.5rem;
+    font-weight: 500;
+    cursor: pointer;
+    border: 1px solid $color-grey-light-2;
+
+    transition: all 0.2s;
+
+    &:hover {
+      background-color: $color-grey-light-2;
     }
 
-    &__title {
-        font-size: 1.8rem;
-        font-weight: 600;
+    &:active {
+      background-color: $color-grey-light-3;
     }
 
-    &__subtitle {
-        font-size: 1.3rem;
-        margin-top: 1rem;
+    &--disabled {
+      cursor: not-allowed;
+
+      &,
+      &:hover,
+      &:active {
+        background-color: $color-grey-light-3 !important;
+        color: $color-grey-dark-2 !important;
+        border-color: $color-grey-light-3 !important;
+      }
     }
 
-    &__buttons-box {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-gap: 1rem;
+    &--positive {
+      background-color: $color-primary;
+      color: $color-white;
+      border: none;
 
-        &>* {
-            justify-self: center;
-        }
+      &:hover {
+        background-color: $color-primary-dark;
+      }
+
+      &:active {
+        background-color: $color-primary-light;
+      }
     }
 
-    &__button {
-        padding: 1.3rem 3.3rem;
-        border-radius: 1rem;
-        font-size: 1.5rem;
-        font-weight: 500;
-        cursor: pointer;
-        border: 1px solid $color-grey-light-2;
+    &--delete {
+      background-color: $color-red;
+      color: $color-white;
+      border: none;
 
-        transition: all .2s;
+      &:hover {
+        background-color: $color-red-dark;
+      }
 
-        &:hover {
-            background-color: $color-grey-light-2;
-        }
+      &:active {
+        background-color: $color-red-light;
+      }
+    }
 
+    &--warning {
+      background-color: $color-secondary;
+      color: $color-white;
+      border: none;
+
+      &:hover {
+        background-color: $color-secondary-dark;
+      }
+
+      &:active {
+        background-color: $color-secondary-light;
+      }
+    }
+
+    &--delete,
+    &--positive,
+    &--warning {
+      &.popup-option-or-cancel__button--disabled {
+        // Disabled state for delete and positive buttons
+        // is a bit different from the default disabled state
+
+        &,
+        &:hover,
         &:active {
-            background-color: $color-grey-light-3;
+          background-color: $color-grey-light-2 !important;
+          color: $color-grey-dark-3 !important;
         }
-
-        &--disabled {
-            cursor: not-allowed;
-
-            &,
-            &:hover,
-            &:active {
-                background-color: $color-grey-light-3 !important;
-                color: $color-grey-dark-2 !important;
-                border-color: $color-grey-light-3 !important;
-            }
-        }
-
-        &--positive {
-            background-color: $color-primary;
-            color: $color-white;
-            border: none;
-
-            &:hover {
-                background-color: $color-primary-dark;
-            }
-
-            &:active {
-                background-color: $color-primary-light;
-            }
-        }
-
-        &--delete {
-            background-color: $color-red;
-            color: $color-white;
-            border: none;
-
-            &:hover {
-                background-color: $color-red-dark;
-            }
-
-            &:active {
-                background-color: $color-red-light;
-            }
-        }
-
-        &--warning {
-            background-color: $color-secondary;
-            color: $color-white;
-            border: none;
-
-            &:hover {
-                background-color: $color-secondary-dark;
-            }
-
-            &:active {
-                background-color: $color-secondary-light;
-            }
-        }
-
-        &--delete,
-        &--positive,
-        &--warning {
-            &.popup-option-or-cancel__button--disabled {
-                // Disabled state for delete and positive buttons
-                // is a bit different from the default disabled state
-
-                &,
-                &:hover,
-                &:active {
-                    background-color: $color-grey-light-2 !important;
-                    color: $color-grey-dark-3 !important;
-                }
-            }
-        }
-
+      }
     }
-
+  }
 }
